// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StripePayoutPage matches snapshot with Stripe connected 1`] = `
<Page
  scrollingDisabled={false}
  title="StripePayoutPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="StripePayoutPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="StripePayoutPage"
      />
    </LayoutWrapperTopbar>
    <withViewport(LayoutWrapperAccountSettingsSideNavComponent)
      currentTab="StripePayoutPage"
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="StripePayoutPage.heading"
            values={Object {}}
          />
        </h1>
        <injectIntl(StripeConnectAccountFormComponent)
          disabled={false}
          inProgress={false}
          onChange={[Function]}
          onGetStripeConnectAccountLink={[Function]}
          onSubmit={[Function]}
          ready={false}
          savedCountry={null}
          stripeAccountError={null}
          stripeBankAccountLastDigits={null}
          stripeConnected={false}
          submitButtonText="StripePayoutPage.submitButtonText"
        />
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;

exports[`StripePayoutPage matches snapshot with Stripe not connected 1`] = `
<Page
  scrollingDisabled={false}
  title="StripePayoutPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="StripePayoutPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="StripePayoutPage"
      />
    </LayoutWrapperTopbar>
    <withViewport(LayoutWrapperAccountSettingsSideNavComponent)
      currentTab="StripePayoutPage"
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="StripePayoutPage.heading"
            values={Object {}}
          />
        </h1>
        <injectIntl(StripeConnectAccountFormComponent)
          disabled={false}
          inProgress={false}
          onChange={[Function]}
          onGetStripeConnectAccountLink={[Function]}
          onSubmit={[Function]}
          ready={false}
          savedCountry={null}
          stripeAccountError={null}
          stripeBankAccountLastDigits={null}
          stripeConnected={false}
          submitButtonText="StripePayoutPage.submitButtonText"
        />
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;

exports[`StripePayoutPage matches snapshot with details submitted 1`] = `
<Page
  scrollingDisabled={false}
  title="StripePayoutPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="StripePayoutPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="StripePayoutPage"
      />
    </LayoutWrapperTopbar>
    <withViewport(LayoutWrapperAccountSettingsSideNavComponent)
      currentTab="StripePayoutPage"
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="StripePayoutPage.heading"
            values={Object {}}
          />
        </h1>
        <injectIntl(StripeConnectAccountFormComponent)
          disabled={false}
          inProgress={false}
          onChange={[Function]}
          onGetStripeConnectAccountLink={[Function]}
          onSubmit={[Function]}
          ready={true}
          savedCountry={null}
          stripeAccountError={null}
          stripeBankAccountLastDigits={null}
          stripeConnected={false}
          submitButtonText="StripePayoutPage.submitButtonText"
        />
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;
